image attribute "alt" changed

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             
             <div>
                     <div class="inline">
-                        <img class="cardImage" src="images/card1.jpg" alt="Course Overview">
+                        <img class="cardImage" src="images/card1.jpg" alt="About This Course Image">
                         <div>
                             <h2 class="h2" >About This Course</h2>
                             <p>Welcome to <strong class="italics">WDD 131 – Dynamic Web Fundamentals</strong>, a course designed to introduce you to the essential skills of modern web
@@ -60,7 +60,7 @@
             
             <div>
                 <div class="inline">
-                    <img class="cardImage" src="images/card2.jpg" alt="Course Overview">
+                    <img class="cardImage" src="images/card2.jpg" alt="My Learning Journey Image">
                     <div>
                         <h2 class="h2">My Learning Journey</h2>
                         <p>My journey into web development has been an exciting and transformative experience. Starting with little to no knowledge
