--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <img class="cardImage" src="images/card1.jpg" alt="About This Course Image">
                         <div>
                             <h2 class="h2" >About This Course</h2>
-                            <p>Welcome to <strong class="italics">WDD 131 – Dynamic Web Fundamentals</strong>, a course designed to introduce you to the essential skills of modern web
+                            <p class="cardText">Welcome to <strong class="italics">WDD 131 – Dynamic Web Fundamentals</strong>, a course designed to introduce you to the essential skills of modern web
                             development. Throughout this course, you will explore the foundational technologies of the web—HTML for structuring
                             content, CSS for styling and layout, and JavaScript for adding interactivity.</p>
                         </div>
@@ -63,7 +63,7 @@
                     <img class="cardImage" src="images/card2.jpg" alt="My Learning Journey Image">
                     <div>
                         <h2 class="h2">My Learning Journey</h2>
-                        <p>My journey into web development has been an exciting and transformative experience. Starting with little to no knowledge
+                        <p class="cardText" >My journey into web development has been an exciting and transformative experience. Starting with little to no knowledge
                         of coding, I have gradually built my skills through dedication, hands-on practice, and continuous learning. Each project
                         and challenge has pushed me to think critically, solve problems creatively, and develop a deeper appreciation for how
                         websites function.</p>
