Personal_Projects Done

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,34 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Learn Asante Twi</title>
-  <link rel="stylesheet" href="siteplan.css">
-  <script src="siteplan.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="author" content="Douglas Justice">
+    <title>Learn Asante Twi</title>
+    <link rel="stylesheet" href="siteplan.css">
+    
 </head>
 <body>
-  <header>
-    <h1>Learn Asante Twi</h1>
-    <nav>
-      <ul>
-        <li><a href="siteplan.html">Site Plan</a></li>
-        <li><a href="lessons.html">Lessons</a></li>
-        <li><a href="practice.html">Practice</a></li>
-      </ul>
-    </nav>
-  </header>
 
-  <main>
-    <section>
-      <h2>Welcome!</h2>
-      <p>This site helps you learn Asante Twi through basic vocabulary and interactive quizzes. Practice and master common words and phrases spoken in Ghana!</p>
+    <header>
+        <h1>Learn Asante Twi</h1>
+        <nav>
+            <ul>
+                <li><a href="siteplan.html">site plan</a></li>
+                <li><a href="lessons.html">Lesson</a></li>
+                <li><a href="practice.html">Practice</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="intro">
+        <h2> 😀 Akwaaba!, Welcome. </h2>
+        <p>Welcome to the Asante Twi learning page. Here, you will learn
+           the basics of the Asante Twi. Lets have some introduction to the language</p>
     </section>
-  </main>
+
+    <section id="intro">
+      <h2>Introduction to Asante Twi</h2>
+      <p>Asante Twi is one of the Akan languages spoken in Ghana, 
+        primarily by the Asante people in the Ashanti Region. It is a 
+        widely used language in the country and serves as a means of 
+        communication for millions of Ghanaians.</p>
+
+        <strong> Origins and Significance</strong>
+        <p>
+          Asante Twi belongs to the larger Akan language family, which
+           includes other dialects such as Fante and Akuapem Twi. The 
+           language has deep historical roots, dating back to the powerful Asante Kingdom, which was a dominant force in West Africa for centuries.
+        </p>
+        <strong>Characteristics of Asante Twi</strong>
+        <p>
+          <ul>
+            <li>
+              <Strong>Tonality: </Strong>
+              Asante Twi is a tonal language, 
+              meaning that the pitch or tone used can change the meaning of a word.
+          </li>
+          </ul>
+        <ul>
+          <li>
+            <Strong>Alphabet and Writing: </Strong>
+            The language uses the Latin script for 
+            writing, with some special characters to represent unique sounds.
+          </li>
+        </ul>
+
+        <ul>
+          <li>
+            <Strong>Common Expressions: </Strong>
+            Greetings and polite phrases are essential in Asante Twi, 
+            such as "Ɛte sɛn?" (How are you?) and "Medɔ wo" (I love you).
+          </li>
+        </ul>
+      </p>
+      <h2>Importance in Ghana</h2>
+      <p>
+        Asante Twi is spoken not only in the Ashanti Region but also in 
+        other parts of Ghana due to its influence. It is a key language 
+        in Ghanaian culture, music, media, and education. Many people learn 
+        Asante Twi as a second language because of its widespread use.
+      </p>
+  </section>
+  <section><p> Now that we have a fair knowledge of the language lets look at some 
+    simple lessons on greetings. Ready when you are ready!
+    <a href="lessons.html">click here</a>
+  </p></section>
+  
+
+
 
   <footer>
-    <p>&copy; Douglas Justice | 2025 Learn Asante Twi | Ghana </a></p>
-    <p id="last-modified"></p>
+    <p>&copy; <span id="currentyear"></span> Douglas Justice | 2025 Learn Asante Twi | Ghana</p>
+    <p id="lastModified"></p>
   </footer>
-</body>
+  <script src="siteplanDates.js"></script>
+
+    
+  </body>
 </html>
