--- a/projects/siteplan.html
+++ b/projects/siteplan.html
@@ -57,20 +57,13 @@
         <li><strong>Body Font:</strong> "Open Sans", sans-serif – used for paragraph text for readability and modern appearance.</li>
       </ul>
     </section>
-
-    <section>
-      <h2>Wireframe</h2>
-      <h3>Mobile View</h3>
-      <img src="wireframe-mobile.png" alt="Mobile wireframe of home page" width="300">
-
-      <h3>Desktop View</h3>
-      <img src="wireframe-desktop.png" alt="Desktop wireframe of home page" width="500">
-    </section>
+    
   </main>
 
-  <footer>
-    <p>&copy; Douglas Justice | 2025 Learn Asante Twi | Ghana </a></p>
-    <p id="last-modified"></p>
-  </footer>
+    <footer>
+      <p>&copy; <span id="currentyear"></span> Douglas Justice | 2025 Learn Asante Twi | Ghana</p>
+      <p id="lastModified"></p>
+    </footer>
+    <script src="siteplanDates.js"></script>
 </body>
 </html>
