--- a/projects/siteplan.html
+++ b/projects/siteplan.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="Douglas Justice">
   <title>Site Plan - Learn Asante Twi</title>
   <link rel="stylesheet" href="siteplan.css">
 </head>
@@ -57,7 +58,7 @@
         <li><strong>Body Font:</strong> "Open Sans", sans-serif – used for paragraph text for readability and modern appearance.</li>
       </ul>
     </section>
-    
+
   </main>
 
     <footer>
