--- a/projects/lessons.html
+++ b/projects/lessons.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="author" content="Douglas Justice">
     <title>Lesson 1: Greetings in Asante Twi</title>
     <link rel="stylesheet" href="siteplan.css">
     <script src="scripts/getdates.js" defer></script>
